@@ -1,3 +1,14 @@
+2009-12-06  Shinichiro Hamaji  <shinichiro.hamaji@gmail.com>
+
+        Reviewed by David Kilzer.
+
+        Bugzilla should show images in git patches
+        https://bugs.webkit.org/show_bug.cgi?id=31395
+
+        Show images in git patches using git-apply.
+
+        * PrettyPatch/PrettyPatch.rb:
+
 2009-10-23  Eric Seidel  <eric@webkit.org>
 
         Reviewed by Adam Roben.
